<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中子星</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">中子星</string>
    <string name="main_tab_today_title">今天</string>
    <string name="man_tab_today_heightText_text">身高</string>
    <string name="man_tab_today_weightText_text">体重</string>
    <string name="man_tab_today_metabolismTitle_text">新陈代谢情况</string>
    <string name="man_tab_today_metabolismRateTitle_text">代谢率：</string>
    <string name="man_tab_today_metabolismRateDimesion_text">大卡/小时</string>
    <string name="man_tab_today_metabolismTotalTitle_text">总计：</string>
    <string name="man_tab_today_metabolismTotalDimesion_text">大卡</string>
    <string name="man_tab_today_metabolismRMRRateTitle_text">静息代谢率</string>
    <string name="man_tab_today_metabolismAccelerationDimesion_text">米/秒平方</string>
    <string name="man_tab_today_metabolismAccelerationTitle_text">当前加速度：</string>
    <string name="man_tab_today_bmiMeasure_text">体型</string>
    <string name="man_tab_today_physicalTitle_text">身体检查记录</string>
    <string name="action_settings">Settings</string>

    <!-- for weiboSSO by yy -->
    <!-- 获取 Token -->
    <string name="weibosdk_demo_obtain_token_via_signature">通过应用签名信息获取 Token</string>
    <string name="weibosdk_demo_obtain_token_via_sso">通过单点登录 (SSO) 获取 Token</string>
    <string name="weibosdk_demo_obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="weibosdk_demo_obtain_token_via_code_hint"><b>请注意：</b>基于以下几点原因，您可能不想使用前面的两种授权方式：\n<li>出于安全性的考虑，您不信任目前使用应用的包名和签名来获取 Token 的方式</li>\n<li>您不想安装微博客户端</li>\n您可以自行通过 Code 来获取 Token。通过这种方式需要使用到 APP_SECRET，请务必妥善保管好自己的 APP_SECRET，<b>不要直接暴露在程序中，泄露有风险</b>。\n<b>更多细节请查看：</b><a href="http://open.weibo.com/wiki/%E6%8E%88%E6%9D%83%E6%9C%BA%E5%88%B6%E8%AF%B4%E6%98%8E#Web.E5.BA.94.E7.94.A8.E7.9A.84.E9.AA.8C.E8.AF.81.E6.8E.88.E6.9D.83">验证授权步骤</a></string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>

    <string-array name="new_record_weight">
        <item>量量体重</item>
        <item>体重</item>
        <item>千克</item>
        <item>测量日期</item>
        <item>年-月-日 时:分</item>
    </string-array>
    
    <!-- 日期格式 -->
    <string name="dateformat_birthday">"yyyy年MM月dd日"</string>
    <string name="dateformat_birthday_in_database">"yyyy-MM-dd"</string>
    
    <!-- 用户类型 -->
    <string-array name="user_type">
        <item>注册用户</item>
        <item>子账号</item>
    </string-array>

    <!-- 常用词和短语 -->
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="unknown">未知</string>
    <string name="add">添加</string>
    <string name="modify">修改</string>
    <string name="signup">注册</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="next">下一步</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="varification_code">验证码</string>
    <string name="you">您</string>
    <string name="name">名字</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="andy_lau">刘德华</string>
    <string name="andy_lau_birthday">1961年9月27日</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="china">中国</string>
    <string name="today">今天</string>
    <string name="family">家人</string>
    <string name="more">更多</string>
    <string name="settings">设置</string>
    
    <string name="waiting_for_confirm">等待家人确认</string>
    

    <string-array name="new_record_height">
        <item>量身高</item>
        <item>身高</item>
        <item>厘米</item>
        <item>测量日期</item>
        <item>年-月-日 时:分</item>
    </string-array>
    <string-array name="new_record_g_blood_test">
        <item>血常规检测记录</item>
        <item>检测单位</item>
        <item>某医院</item>
        <item>测量日期</item>
        <item>年-月-日 时:分</item>
    </string-array>
    <string-array name="new_record_rbc">
        <item>红血球</item>
        <item>红血球数</item>
        <item>M/ul</item>
        <item>测量日期</item>
        <item>年-月-日 时:分</item>
    </string-array>
    <string-array name="new_record_g_blood_pressure">
        <item>血压测量记录</item>
        <item>测量单位</item>
        <item>某医院</item>
        <item>测量日期</item>
        <item>年-月-日 时:分</item>
    </string-array>
    <string-array name="bmi_measure">
        <item>偏瘦</item>
        <item>正常</item>
        <item>最佳体型</item>
        <item>超重</item>
        <item>肥胖</item>
        <item>病态</item>
    </string-array>

    <string name="title_activity_pehistory">PEHistoryActivity</string>
    <string name="newone">添加</string>
    <string name="title_activity_pehistory_item">PEHistoryItemActivity</string>

    <string-array name="peh_history_title">
        <item>血常规检查记录</item>
        <item>尿液检查记录</item>
        <item>血压测量记录</item>
    </string-array>

    <string name="title_activity_group_testing">GroupTestingActivity</string>

    <string-array name="group_testing_title">
        <item>血液</item>
        <item>尿液</item>
        <item>血压、脉搏</item>
    </string-array>
    <string-array name="blood_testing_name_list">
        <item>红细胞 / RBC（10.0-12.0）</item>
        <item>白细胞 / WBC（4.0-10.0）</item>
        <item>血红蛋白 / HGB（110-170）</item>
        <item>血细胞压积 / HCT（34.0-48.0）</item>
        <item>血小板 / HCT（100-300）</item>
        <item>血小板压积 / HCT（0.08-1.00）</item>
    </string-array>
    <string-array name="blood_testing_dimension_list">
        <item>M/ul</item>
        <item>K/ul</item>
        <item>g/l</item>
        <item>%</item>
        <item>K/ul</item>
        <item>%</item>
    </string-array>
    <string-array name="urine_testing_name_list">
        <item>尿比重</item>
        <item>尿酸碱度</item>
    </string-array>
    <string-array name="urine_testing_dimension_list">
        <item>g/ml</item>
        <item>mol/l</item>
    </string-array>
    <string-array name="blood_pressure_name_list">
        <item>收缩压</item>
        <item>舒张压</item>
        <item>心率</item>
    </string-array>
    <string-array name="blood_pressure_dimension_list">
        <item>mmHg</item>
        <item>mmHg</item>
        <item>次/分钟</item>
    </string-array>

    <string name="title_activity_modify_pehistory">ModifyPEHistoryActivity</string>
    <string name="title_activity_add_choose">AddChooseActivity</string>
    <string name="title_activity_modify_record">ModifyRecordActivity</string>
    <string name="file_root_dir">neutron</string>

    <string-array name="relations">
        <item>关系</item>
        <item>我</item>
        <item>母亲</item>
        <item>父亲</item>
        <item>妻子</item>
        <item>丈夫</item>
        <item>女儿</item>
        <item>儿子</item>
        <item>奶奶</item>
        <item>爷爷</item>
        <item>姐妹</item>
        <item>兄弟</item>
        <item>朋友</item>
    </string-array>
    

    <string name="user_info_title">添加家庭成员</string>
    <string name="user_info_title_avatar">头像</string>
    <string name="user_info_title_name">名字</string>
    <string name="user_info_title_gender">性别</string>
    <string name="user_info_title_birthday">生日</string>
    <string name="user_info_title_relation">与我的关系</string>
    <string name="user_info_title_usertype">是否是注册用户</string>
    <string name="user_info_title_idd">手机号国家代码</string>
    <string name="user_info_title_phone_number">注册手机号</string>
    <string name="user_info_hint_name">未填写</string>
    <string name="user_info_hint_gender">请填写</string>
    <string name="user_info_hint_birthday">未知</string>
    <string name="user_info_hint_relation">未设置</string>
    <string name="user_info_hint_usertype">未知</string>
    <string name="user_info_hint_idd">+86</string>
    <string name="user_info_hint_phone_number">未知</string>
    <string name="title_activity_delete">DeleteActivity</string>
    
    <string-array name="change_title">
        <item>更改</item>
        <item>更改名字</item>
        <item>更改电话号码</item>
    </string-array>
    
    <string-array name="gender">
        <item>女</item>
        <item>男</item>
    </string-array>
    
    <string-array name="confirmation_dialog_phone_number">
        <item>确认手机号码</item>
        <item>我们将向您的这个手机号码发送一串验证码：</item>
    </string-array>
 
    <string-array name="confirmation_dialog_connect_failed">
        <item>啊呀，没连上！</item>
        <item>可能是网络连接不畅，导致我们的这次努力没连上！再试一次看看！</item>
    </string-array>
       
    <string-array name="idd_country">
        <item>美国</item>
        <item>加拿大</item>
        <item>希腊</item>
        <item>荷兰</item>
        <item>比利时</item>
        <item>法国</item>
        <item>西班牙</item>
        <item>中国</item>       
        <item>香港</item>
        <item>澳门</item>
    </string-array>

    <string-array name="idd">
        <item>+1</item>
        <item>+1</item>
        <item>+30</item>
        <item>+31</item>
        <item>+32</item>
        <item>+33</item>
        <item>+34</item>
        <item>+86</item>      
        <item>+852</item>
        <item>+853</item>
    </string-array>
</resources>
